# py2025_study

./: makefile  pyproject.toml
.github/workflows/: lint.yaml
src/py2025_study/: main.py
