[project]
name = "py2025-study"
version = "0.1.0"
description = ""
authors = [{ name = "uncledee", email = "mr.babkind@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pyaml (>=25.5.0,<26.0.0)", "requests (>=2.32.4,<3.0.0)"]

[tool.poetry]
packages = [{ include = "py2025_study", from = "src" }]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
